# mycropad-fw

./: .gitmodules  CMakeLists.txt  README.md
fw/: CMakeLists.txt
fw/include/: ArduinoJson.h  consts.h  enums.h  gpio.h  keymap.h  leds.h  misc.h  rotary_encoder.h  tusb_config.h
fw/src/: cdc_task.cpp  gpio.cpp  hid_task.cpp  keymap.cpp  leds.cpp  main.cpp  misc.c  rotary_encoder.cpp  usb_descriptors._  usb_descriptors.c  ws2812.c
